fai (3.4~beta6) unstable; urgency=low

  [ Thomas Lange ]
  * get-config-dir-http: new script to get a tarball of the config space
    (thanks to Waldemar Brodkorb for the initial patch)
  * dhcp-edit: new command that adds or removes entries to/from dhcpd.conf
    add $modified, add more messages, fix code for adding a host
  * make-fai-nfsroot.conf: set NFSROOT_HOOKS by default
  * make-fai-nfsroot: fix typo, remove redundant rm command
  * mkramdisk: use exit in main routine (closes: #583289)
  * ainsl: exit with 0 if line already exists in the file
  * sources.list: fix security.geo.debian.org domain entries
  * install_packages: Fix typo in info message (thanks Adrian Glaubitz)
  * updatebase: remove pre-lenny code
  * make-fai-nfsroot, make-fai-nfsroot.8: add option -B, (closes: #576092)
    (thanks to Mika Prokop for the patch)
  * copy pxelinux.0 to TFTPROOT only if it's not already existing
    remove unneeded else
  * disk-info: rename subroutine
  * faimond-gui: Tk::Balloon is not used atm.
  * subroutines: show rx and tx bytes for network device at the end
  * control: change dependencies on fai-setup-storage
  * fai-chboot,fai-chboot.8: add option -P
  * setup-storage.8: add info about flag_initial
  * doc/error-levels: describe error levels of task_error subroutine
  * make-fai-nfsroot: remove etc/hostname and 70-persistent-net.rules from
    nfsroot and base.tgz (thanks to Manuel Hachtkemper for the patch)
  * subroutines: do not dump bash array variables
  * subroutines: add commentary how to create variables.log for sourcing
    them later again (thanks to Andreas Schuldei)
  * put ROOTPW into quotes, so empty password will work (thanks to Adrien
    Cunin for the patch)
  * fai-client.install: remove list_disks
  * 10-misc, subroutines: move adding /etc/hosts entry from task_prepareapt
    to config space script, add only if host does not belong to class DHCPC
  * make-fai-nfsroot: add test if etc/init is available