@@ -5,6 +5,7 @@ fai (3.4~beta6) unstable; urgency=low
     (thanks to Waldemar Brodkorb for the initial patch)
   * dhcp-edit: new command that adds or removes entries to/from dhcpd.conf
     add $modified, add more messages, fix code for adding a host
+  * faimond-gui: add option -s
   * make-fai-nfsroot.conf: set NFSROOT_HOOKS by default
   * make-fai-nfsroot: fix typo, remove redundant rm command
   * mkramdisk: use exit in main routine (closes: #583289)
@@ -69,6 +70,7 @@ fai (3.4~beta6) unstable; urgency=low
   * subroutines: adjust to new option of mkramdisks
   * subroutines: new subroutine umount_csspace, so it can be used in user
     hooks (thanks to Waldemar for the patch)
+  * Makefile: add support for small pixmaps in faimond-gui
   
   [ Michael Tautschnig ]
   * control: Move setup-storage to its own package (fai-setup-storage). Thanks
